--- a/VirtoCommerce.Storefront/appsettings.json
+++ b/VirtoCommerce.Storefront/appsettings.json
@@ -30,7 +30,7 @@
 
       // Use UserName and Password for Platform API authentication
       "UserName": "admin",
-      "Password": "thebest",
+      "Password": "store",
       "RequestTimeout": "0:0:30"
     },
     "ChangesPollingInterval": "0:0:15",
